--- a/CSS/Расписание 7-А Класс.css
+++ b/CSS/Расписание 7-А Класс.css
@@ -1061,7 +1061,7 @@ p{
  position: relative;
  width: 100%;
  height: 430px;
- background-color: hsl(353, 91%, 50%);
+ background-color: var(--first-color-dark);
  top: 650px;
 }
 /* .расписание{
